# angzarr-examples-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Containerfile  README.md  TASKS.md  buf.gen.yaml  justfile  justfile.container  lefthook.yml  skaffold.yaml
.devcontainer/: Containerfile
.github/workflows/: build-base-image.yml  bump-coordinator-digests.yml  ci.yml
deploy/k8s/helm/: values.yaml
deploy/kind/: cluster.yaml
features/: acceptance  unit
hand-flow/src/: main.cpp
hand/agg/handlers/: action_handler.cpp  action_handler.hpp  deal_community_handler.cpp  deal_community_handler.hpp  deal_handler.cpp  deal_handler.hpp
hand/agg/src/: hand.cpp  hand.hpp  main.cpp
hand/saga-player/: CMakeLists.txt
hand/saga-player/src/: main.cpp
hand/saga-table/: CMakeLists.txt
hand/saga-table/src/: main.cpp
hand/upc/: CMakeLists.txt
hand/upc/src/: main.cpp
player/agg/handlers/: deposit_handler.cpp  deposit_handler.hpp  register_handler.cpp  register_handler.hpp  release_handler.cpp  release_handler.hpp  reserve_handler.cpp  reserve_handler.hpp  transfer_handler.cpp  transfer_handler.hpp  withdraw_handler.cpp  withdraw_handler.hpp
player/agg/src/: main.cpp  player.cpp  player.hpp
player/agg/tests/: deposit_test.cpp
player/saga-table/: CMakeLists.txt
player/saga-table/src/: main.cpp
prj-cloudevents/src/: cloudevents_projector.cpp
prj-output-oo/: CMakeLists.txt
table/agg/handlers/: create_handler.cpp  create_handler.hpp  join_handler.cpp  join_handler.hpp  leave_handler.cpp  leave_handler.hpp
table/agg/src/: main.cpp  table.cpp  table.hpp
table/saga-hand-oo/: CMakeLists.txt
table/saga-player/: CMakeLists.txt
table/saga-player/src/: main.cpp
tests/: CMakeLists.txt  acceptance.sh  acceptance_runner.cpp  acceptance_steps.cpp  all_acceptance_steps.cpp  all_steps.cpp  command_client.cpp  command_client.hpp  grpc_client.hpp  hand_steps.cpp  inprocess_client.hpp  mutation_test.cpp  orchestration_steps.cpp  player_steps.cpp  process_manager_steps.cpp  table_steps.cpp  test_context.hpp  tournament_steps.cpp
tournament/agg/: CMakeLists.txt
tournament/agg/src/: main.cpp  tournament_state.cpp  tournament_state.hpp
